testing/macro-tests/tests/ui/index_reserved_namespace.stderr
error: entity name '~UiIndexedEntity' uses reserved '~' namespace
  --> tests/ui/index_reserved_namespace.rs:18:12
   |
18 |     name = "~UiIndexedEntity",
   |            ^^^^^^^^^^^^^^^^^^
